k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mggt-smartcity
  labels:
    app.kubernetes.io/part-of: mggt-gp4
