k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-nodered
  namespace: mggt-smartcity
spec:
  selector:
    app: app1-nodered
  ports:
    - name: http
      port: 1880
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: app2-mqtt
  namespace: mggt-smartcity
spec:
  selector:
    app: app2-mqtt
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: mqtt
      port: 1883
      targetPort: mqtt
    - name: websocket
      port: 9001
      targetPort: websocket
