k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smartcity-apps
  namespace: mggt-smartcity
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: mggt-smartcity-sso-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: app1.projet.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-nodered
                port:
                  number: 1880

    - host: app2.projet.local
      http:
        paths:
          - path: /mqtt
            pathType: Prefix
            backend:
              service:
                name: app2-mqtt
                port:
                  number: 9001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app2-mqtt
                port:
                  number: 80
